tests/mypy/mypy_function_wrapper_cls_t8.out
tests/mypy/mypy_function_wrapper_cls_t8.py:41: error: Argument 3 to "FunctionWrapper" has incompatible type "str"; expected "bool | Boolean | Callable[[], bool] | None"  [arg-type]
Found 1 error in 1 file (checked 1 source file)
